scrollbar y in sidebar corrected

--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -44,8 +44,7 @@ body {
     vertical-align: middle;
     align-items: center;
     font-weight: 400;
-    font-size: 16px;  
-    width: 232px;
+    font-size: 16px;      
     height: 46px;
     padding: 8px 56px 8px 56px;
     gap: 12px;
